--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Test</h1>
     <h2 id="fetchStatus">Server Status</h2>
     <button id="testButton">Test</button>
+    <button id="apiTestButton">API Test</button>
     <a href="./server.html" target="_blank">Server Page</a>
     <script src="./index.js" type="module"></script>
   </body>
