Full working draft
- User selection of object drives fetch call for right ascension and declination data

--- a/index.html
+++ b/index.html
@@ -33,6 +33,20 @@
           placeholder="Longitude"
         />
       </div>
+      <div class="selectionContainer">
+        <select name="trackingObject" id="trackingObjectSelection">
+          <option value="10">Sun</option>
+          <option value="11">Moon</option>
+          <option value="1">Mercury</option>
+          <option value="2">Venus</option>
+          <option value="4">Mars</option>
+          <option value="5">Jupiter</option>
+          <option value="6">Saturn</option>
+          <option value="7">Uranus</option>
+          <option value="8">Neptune</option>
+          <option value="9">Pluto</option>
+        </select>
+      </div>
       <button id="testButton" class="requestButton">Test Request</button>
       <div class="resultsContainer">
         <h2 class="coordinateResult">
