--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
       </div>
       <button id="testButton" class="requestButton">Test Request</button>
       <div class="resultsContainer">
+        <h2 class="trackingObjectName">
+          Tracked Object: <span id="trackingObjectName">---</span>
+        </h2>
         <h2 class="coordinateResult">
           Altitude: <span id="altitudeResult">-</span>
         </h2>
