--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <h2>Server Status:</h2>
         <h3 class="serverStatusResponse" id="fetchStatus">---No Call---</h3>
       </div>
+      <div class="clockContainer">
+        <h2 id="clock"></h2>
+      </div>
       <div class="latLonInputContainer">
         <input
           class="coordinateInput"
