--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         <h2 class="result trackingObjectName">
           Tracked Object: <span id="trackingObjectName">---</span>
         </h2>
+        <h3>Data Timestamp: <span id="dataTimestamp"> - </span></h3>
         <h2 class="result coordinateResult">
           Altitude: <span id="altitudeResult">-</span>
         </h2>
