Added web worker
- Main thread no longer blocked by long running data fetch operation.

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         </select>
       </div>
       <button id="testButton" class="requestButton">Test Request</button>
+      <button id="testWorker" class="requestButton">Test Worker</button>
       <div class="resultsContainer">
         <h2 class="result trackingObjectName">
           Tracked Object: <span id="trackingObjectName">---</span>
