Web worker concern separation
Web worker handling now abstracts more behavior away from index js.

- Main worker handles requests from index to initiate and manage other workers.

- Fetch worker calls the server to pull data from USNO

- Live display worker takes the resulting altitude azimuth array and posts the most up to date data timestamp to main, where it is then routed to index.

- Need to add functionality to main to watch add additional data if necessary, i.e live display worker is nearing the end of its supplied array.

- Need to clean everything up

--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
           <option value="9">Pluto</option>
         </select>
       </div>
-      <button id="testButton" class="requestButton">Test Request</button>
-      <button id="testWorker" class="requestButton">Test Worker</button>
+      <button id="mainWorkerButton" class="requestButton">
+        Main worker call
+      </button>
       <div class="resultsContainer">
         <h2 class="result trackingObjectName">
           Tracked Object: <span id="trackingObjectName">---</span>
