Cardinal directions display
- Moved cardinal direction calculation to serverless function.
- Displaying cardinal direction to user.

--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
         <h2 class="result coordinateResult">
           Azimuth: <span id="azimuthResult">-</span>
         </h2>
+        <h2 class="result coordinateResult">
+          Cardinal: <span id="cardinalResult">-</span>
+        </h2>
         <!-- <div class="serverStatusContainer">
           <h2>Server Status:</h2>
           <h3 class="serverStatusResponse" id="fetchStatus">---No Call---</h3>
