Starting Visual Elements
Basic connection between azimuth angle and angle of a div element shown on screen

--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
           Altitude: <span id="altitudeResult">-</span>
         </h2>
         <h2 class="result coordinateResult">
-          Azimuth: <span id="azimuthResult">-</span>
+          Azimuth: <span id="azimuthResult" data-angle="20">-</span>
+          <div id="azimuthResultArrow"></div>
         </h2>
         <h2 class="result coordinateResult">
           Cardinal: <span id="cardinalResult">-</span>
