--- a/index.html
+++ b/index.html
@@ -69,13 +69,39 @@
           Tracking Target: <span id="trackingTargetName">---</span>
         </h2>
         <h3>Data Timestamp: <span id="dataTimestamp"> - </span></h3>
-        <h2 class="result coordinateResult">
-          Altitude: <span id="altitudeResult">-</span>
-        </h2>
-        <h2 class="result coordinateResult">
-          Azimuth: <span id="azimuthResult" data-angle="20">-</span>
-          <div id="azimuthResultArrow"></div>
-        </h2>
+        <div class="altitudeResultContainer">
+          <h2 class="result coordinateResult">
+            Altitude: <span id="altitudeResult">-</span>
+          </h2>
+          <div class="altitudeIndicatorContainer">
+            <div class="altitudeIndicator">
+              <div
+                id="altitudeResultArrow"
+                class="altitudeResultArrow altitudeArrowAngle"
+              ></div>
+              <div class="altitudeResultTip"></div>
+              <div class="referenceAngle overhead">+90</div>
+              <div class="referenceAngle horizon">0</div>
+              <div class="referenceAngle underfoot">-90</div>
+            </div>
+          </div>
+        </div>
+        <div class="azimuthResultContainer">
+          <h2 class="result coordinateResult">
+            Azimuth: <span id="azimuthResult">-</span>
+          </h2>
+          <div class="azimuthCompass">
+            <div
+              id="azimuthResultArrow"
+              class="azimuthResultArrow azimuthArrowAngle"
+            ></div>
+            <div class="azimuthResultTip"></div>
+            <div class="cardinalDirection north">N</div>
+            <div class="cardinalDirection east">E</div>
+            <div class="cardinalDirection south">S</div>
+            <div class="cardinalDirection west">W</div>
+          </div>
+        </div>
         <h2 class="result coordinateResult">
           Cardinal: <span id="cardinalResult">-</span>
         </h2>
