--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       src="https://kit.fontawesome.com/af6b4f0cd0.js"
       crossorigin="anonymous"
     ></script>
-    <script src="./mainWorker.js"></script>
-    <script src="./fetchWorker.js"></script>
-    <script src="./liveDisplayWorker.js"></script>
+    <script src="mainWorker.js"></script>
+    <script src="fetchWorker.js"></script>
+    <script src="liveDisplayWorker.js"></script>
     <title>Document</title>
   </head>
   <body>
