--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       crossorigin="anonymous"
     ></script>
     <script src="mainWorker.js" type="module"></script>
-    <script src="fetchWorker.js" type="module"></script>
-    <script src="liveDisplayWorker.js" type="module"></script>
+    <!-- <script src="fetchWorker.js" type="module"></script>
+    <script src="liveDisplayWorker.js" type="module"></script> -->
     <title>Document</title>
   </head>
   <body>
