--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       src="https://kit.fontawesome.com/af6b4f0cd0.js"
       crossorigin="anonymous"
     ></script>
-    <script src="mainWorker.js" type="module"></script>
+    <script src="./mainWorker.js" type="module"></script>
     <!-- <script src="fetchWorker.js" type="module"></script>
     <script src="liveDisplayWorker.js" type="module"></script> -->
     <title>Document</title>
